# cda-python

./: .env  .gitignore  DataSummaries.ipynb  Dockerfile  README.md  Untitled-2.ipynb  Untitled.ipynb  Untitled1.ipynb  cda-python-dev-setup.md  cdapython-old.py  cdapython.py  config.ini  def_to_print.tsv  docker-building.md  docker-compose.yml  dockerfile  example.ipynb  first.json  functionsdefined.txt  get_site_path.py  lark.json  mutation_tests (1).ipynb  noxfile.py  parse.json  parser.py  printstatements.txt  pyproject.toml  pyproject.toml.NO  requestSql.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements.txt.NO  requirements.txt.bak  set_debug_mode.py  setup.cfg  setup.py  sqlFilter.py  tasks.py  (+4 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml  dependabot.yml   linit.yml  tests.yml
cdapython/: .env  ConversionMap.py  ConvertionMap.py  Paginator.py  Progress_manager.py  Q.py  Qbase.py  Qbuilder.py  Qparser.py  Result.py  SqlStatments.py  String_result.py  __init__.py  __init__.py.stupid  __init__.py.temporarily_disabled  __main__.py  _get_unnest_clause.py  api_query_definition.yaml  columns.py  config.ini  constantVariables.py  constant_variables.py  customException.py  decorators.py  decorators_cache.py  endpoints.py  errorLogger.py  error_logger.py  functions.py  get_query_result.py  infer_quote.py  math_parser.py  mvp_functions.py  progress_manager.py  shell.py  simple_parser.py  unique_terms.py  utility.py
cdapython/Q_parser/: Parser.py  Parser_Exception.py  Token.py  __init__.py  lexer.py  topdown.py
cdapython/dataclasses/: querystr.py
cdapython/dataclasses_Q/: querystr.py
cdapython/decorators/: cache.py  measure.py
cdapython/exceptions/: custom_exception.py
cdapython/factories/: __init__.py  count.py  entity.py  file.py  file_count.py  q_factory.py
cdapython/factories/booleanquery/: boolean_query.py
cdapython/factories/diagnosis/: __init__.py  count.py  diagnosis.py
cdapython/factories/mutations/: TParser.py  __init__.py  count.py  mutations.py
cdapython/factories/research_subject/: __init__.py  count.py  file.py  file_count.py  research_subject.py
cdapython/factories/specimen/: __init__.py  count.py  file.py  file_count.py  specimen.py
cdapython/factories/subject/: __init__.py  count.py  file.py  file_count.py  subject.py
cdapython/factories/treatment/: __init__.py  count.py  treatment.py
cdapython/factories/unique_terms/: unique_terms_endpoint.py
cdapython/parsers/: base_parser.py  functions.py  select_parser.py  simple_parser.py  sql.lark  sql_select.lark  sql_update.lark  utils.py  where_parser.py
cdapython/parsers/Q_parser/: Parser.py  Parser_Exception.py  lexer.py
cdapython/parsers/lark/: aggregation.lark  base.lark  expression.lark  where.lark
cdapython/results/: CountResult.py  Result.py  String_result.py  __init__.py  base.py  columns_result.py  count_result.py  page_result.py  result.py  string_result.py
cdapython/results/factories/: __init__.py  __init__.py.disabled  collect_result.py  not_paginated_result.py  result_factory.py
cdapython/select_parser/: select_parser.py  sql.lark
cdapython/services/: __init__.py  api_count_service.py  api_files_service.py  api_service.py  diagnosis_services.py  researchsubject_services.py  specimen_services.py  subject_services.py  treatment_services.py
cdapython/utils/: Cda_Configuration.py  ConversionMap.py  Qconfig.py  check_case.py  match.py  none_check.py  state.py  utility.py
docs/: cda-python-dev-setup.md
notebooks/: BuildingACohort.ipynb  Create a cohort by filtering on desired clinical characteristics.ipynb  Identify a set of cases with gene expression, mutation, and imaging data.ipynb  Untitled.ipynb  Untitled1.ipynb  ValidateVersions.ipynb  example-tester.ipynb  example.ipynb  release3-tester-abridged.ipynb  test.py  testa.ipynb  testing_sql.ipynb
swagger_client/: pyproject.toml  setup.py
swagger_client/cda_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
swagger_client/cda_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swagger_client/cda_client/api/: __init__.py  meta_api.py  query_api.py
swagger_client/cda_client/apis/: __init__.py
swagger_client/cda_client/model/: __init__.py  columns_response_data.py  dataset_description.py  dataset_info.py  error_report.py  model.py  paged_response_data.py  query.py  query_response_data.py  system_status.py  system_status_systems_value.py
swagger_client/cda_client/models/: __init__.py
test_wheels/: cda_client-4.17.2023-py3-none-any.whl  cdapython-2024.0.0-py3-none-any.whl  typing_extensions-4.10.0-py3-none-any.whl
tests/: 003_test_Q_constructor_parsing_of_initializer_filters_with_math_operators.py  502Error.py  Q_loadFile.py  Q_parser_test.py  Q_test_is.py  alex_test.py  all_endpoints.py  async_aiter_test.py  async_strem_test.py  bigDownTheHouse.py  bulk_data.py  case_val.py  check_type_values.py  colmdata.py  count_wrong.py  covertiontesting.py  dataframe_search.ipynb  days_to_birth_math.py  doc.py  donvan_error.py  drs_id.py  fake_result.py  file_endpoint.py  file_error.py  fileduplicates.py  filter_test_error.py  flat_json.py  format_Q_text.py  getFiles.py  global_settings.py  graphdf.py  import_CollectResult.py  jay_error.py  jobstatus.py  join_as_str_error.py  like_testing.py  limit_Q.py  long_query_in.py  longquery.py  not_checker.py  (+117 more)
