[tool.poetry]
name = "cdapython"
version = "2022.6.22"
authors = ["cdadevs"]
description = ""
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
tdparser="1.1.6"
numpy ="1.21.5"
wheel ="0.36.2"
urllib3="1.26.8"
rich="12.0.1"
matplotlib="3.5.1"
typing-extensions="4.2.0"
pandas={ version = "^1.3.5", python = "3.7 || 3.11" }
ipywidgets="7.7.0"
python-dotenv="0.18.0"






[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.mypy]
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
show_column_numbers = true
follow_imports = "silent"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.bandit]
targets = ["cdapython"]
exclude = ["venv", "ven3", "tests"]
skips = ["B101", "B601"]


