[tool.poetry]
name = "cdapython"
version = "2022.12.21"
authors = ["cdadevs"]
description = ""
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy ={version = "1.21.6", python = ">=3.7.1,<3.11"}
wheel ="0.38.4"
urllib3="1.26.8"
typing-extensions="4.4"
rich = "13.2.0"
matplotlib="3.5.1"
pandas={ version = "^1.3.5", python = ">=3.7.1,<3.11" }
ipywidgets = "7.7.2"
python-dotenv="0.18.0"
itables = "^1.1.2"
nbconvert = "6.5.1"
Pillow = "9.3.0"
notebook = "6.4.12"
fastjsonschema = "2.16.2"
jupyter-core = "4.12"
pyzmq = "25"



[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pylint = {version = "2.16.2", python = ">=3.7.2,<3.11"}
safety = "^2.1.1"
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.971"
bandit = "^1.7.4"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"
certifi = "2022.12.7"
coverage = "7.0.5"
platformdirs="2.6.2"
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.mypy]
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
show_column_numbers = true
follow_imports = "silent"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.bandit]
targets = ["cdapython"]
exclude = ["venv", "ven3", "tests"]
skips = ["B101", "B601"]

